--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'll try my best!</p>
       <h1>Where I'm From</h1>
       <p>Dallas, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Discovering new music, movies, etc.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creative Technologist</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Dallas!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>There's so many things to be done with web development - it can be functional, expressive...</p>
     </section>
 
     <footer id="footer">
